// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllComponents c-accordion renders correctly 1`] = `<ul data-type="accordion" data-group="containers" data-uid="1" class="v-expansion-panel c-element c-accordion  c-element-parent "></ul>`;

exports[`AllComponents c-accordion-item renders correctly 1`] = `
<li tabindex="0" data-type="accordion-item" data-group="container-items" data-uid="2" class="v-expansion-panel__container c-element c-accordion-item  c-element-parent ">
  <div class="v-expansion-panel__header">
    <div></div>
    <div class="v-expansion-panel__header__icon">
      <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.expand</i>
    </div>
  </div>
  <div class="v-expansion-panel__body" style="display:none;">
    <div class="v-card" style="height:undefined;">
      <div class="v-card__text c-element-children c-accordion-item-items"></div>
    </div>
  </div>
</li>
`;

exports[`AllComponents c-button renders correctly 1`] = `
<button type="button" data-type="button" data-group="inputs" data-uid="3" class="c-element c-button  v-btn primary">
  <div class="v-btn__content"></div>
</button>
`;

exports[`AllComponents c-calculation renders correctly 1`] = `
<div data-type="calculation" data-group="inputs" data-uid="4" class="c-element c-calculation ">
  <div class="v-input v-text-field">
    <div class="v-input__control">
      <div class="v-input__slot" style="height:undefined;">
        <div class="v-text-field__slot">
          <input type="text">
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages">
          <div class="v-messages__wrapper"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-check renders correctly 1`] = `
<div data-type="check" data-group="inputs" data-uid="5" class="v-input c-element c-check  v-input--selection-controls v-input--checkbox">
  <div class="v-input__control">
    <div class="v-input__slot" style="height:undefined;">
      <div class="v-input--selection-controls__input">
        <input aria-checked="false" role="checkbox" type="checkbox" data-type="check" data-group="inputs" data-uid="5">
        <div class="v-input--selection-controls__ripple"></div>
        <i aria-hidden="true" class="v-icon material-icons">check_box_outline_blank</i>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper"></div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-check-list renders correctly 1`] = `
<div data-type="check-list" data-group="inputs" data-uid="6" class="c-element c-check-list  v-card v-card--flat transparent" style="height:undefined;">
  <label aria-hidden="true" class="v-label" style="left:0px;right:auto;position:relative;"></label>
  <div class="input-group__details error--text"></div>
</div>
`;

exports[`AllComponents c-date renders correctly 1`] = `
<div data-type="date" data-group="inputs" data-uid="7" class="v-menu c-element c-date ">
  <div class="v-menu__activator">
    <div class="v-input v-text-field v-input--is-readonly">
      <div class="v-input__prepend-outer">
        <div class="v-input__icon v-input__icon--prepend">
          <i aria-hidden="true" class="v-icon material-icons">event</i>
        </div>
      </div>
      <div class="v-input__control">
        <div class="v-input__slot" style="height:undefined;">
          <div class="v-text-field__slot">
            <input readonly="readonly" type="text">
          </div>
          <div class="v-input__append-inner">
            <div class="v-input__icon v-input__icon--">
              <i aria-hidden="true" class="v-icon v-icon--link material-icons"></i>
            </div>
          </div>
        </div>
        <div class="v-text-field__details">
          <div class="v-messages">
            <div class="v-messages__wrapper"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-menu__content" style="max-height:auto;min-width:290px;max-width:290px;top:12px;left:12px;transform-origin:top left;z-index:0;display:none;">
    <div data-type="date" data-group="inputs" data-uid="42" class="c-element c-picker fill-height">
      <div class="v-picker v-card v-picker--date fill-height">
        <div class="v-picker__title primary">
          <div class="v-date-picker-title">
            <div class="v-picker__title__btn v-date-picker-title__year">2018</div>
            <div class="v-picker__title__btn v-date-picker-title__date active">
              <div>&nbsp;</div>
            </div>
          </div>
        </div>
        <div class="v-picker__body" style="width:290px;">
          <div>
            <div class="v-date-picker-header">
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.next</i>
                </div>
              </button>
              <div class="v-date-picker-header__value"><strong class="accent--text">August 2018</strong></div>
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.prev</i>
                </div>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date">
              <table>
                <thead>
                  <tr>
                    <th>S</th>
                    <th>M</th>
                    <th>T</th>
                    <th>W</th>
                    <th>T</th>
                    <th>F</th>
                    <th>S</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td></td>
                    <td></td>
                    <td></td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">1</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">2</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">3</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">4</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">5</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">6</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">7</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">8</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating v-btn--outline accent--text">
                        <div class="v-btn__content">9</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">10</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">11</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">12</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">13</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">14</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">15</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">16</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">17</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">18</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">19</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">20</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">21</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">22</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">23</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">24</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">25</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">26</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">27</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">28</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">29</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">30</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">31</div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-date-range renders correctly 1`] = `
<div data-type="date-range" data-group="inputs" data-uid="9" class="v-menu c-element c-date-range ">
  <div class="v-menu__activator">
    <div class="v-input v-text-field v-input--is-label-active v-input--is-dirty v-input--is-readonly">
      <div class="v-input__prepend-outer">
        <div class="v-input__icon v-input__icon--prepend">
          <i aria-hidden="true" class="v-icon material-icons">event</i>
        </div>
      </div>
      <div class="v-input__control">
        <div class="v-input__slot" style="height:undefined;">
          <div class="v-text-field__slot">
            <input readonly="readonly" type="text" value="null - null">
          </div>
          <div class="v-input__append-inner">
            <div class="v-input__icon v-input__icon--clear">
              <i aria-hidden="true" class="v-icon v-icon--link material-icons">clear</i>
            </div>
          </div>
        </div>
        <div class="v-text-field__details">
          <div class="v-messages">
            <div class="v-messages__wrapper"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="v-menu__content" style="max-height:auto;min-width:0px;max-width:580px;top:12px;left:12px;transform-origin:top left;z-index:0;display:none;">
    <div data-type="date-range" data-group="inputs" data-uid="43" class="c-element c-picker fill-height left">
      <div class="v-picker v-card v-picker--date fill-height">
        <div class="v-picker__title primary">
          <div class="v-date-picker-title">
            <div class="v-picker__title__btn v-date-picker-title__year">2018</div>
            <div class="v-picker__title__btn v-date-picker-title__date active">
              <div>&nbsp;</div>
            </div>
          </div>
        </div>
        <div class="v-picker__body" style="width:290px;">
          <div>
            <div class="v-date-picker-header">
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.next</i>
                </div>
              </button>
              <div class="v-date-picker-header__value"><strong class="accent--text">August 2018</strong></div>
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.prev</i>
                </div>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date">
              <table>
                <thead>
                  <tr>
                    <th>S</th>
                    <th>M</th>
                    <th>T</th>
                    <th>W</th>
                    <th>T</th>
                    <th>F</th>
                    <th>S</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td></td>
                    <td></td>
                    <td></td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">1</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">2</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">3</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">4</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">5</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">6</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">7</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">8</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating v-btn--outline accent--text">
                        <div class="v-btn__content">9</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">10</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">11</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">12</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">13</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">14</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">15</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">16</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">17</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">18</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">19</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">20</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">21</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">22</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">23</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">24</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">25</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">26</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">27</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">28</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">29</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">30</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">31</div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div data-type="date-range" data-group="inputs" data-uid="44" class="c-element c-picker fill-height left">
      <div class="v-picker v-card v-picker--date fill-height">
        <div class="v-picker__title primary">
          <div class="v-date-picker-title">
            <div class="v-picker__title__btn v-date-picker-title__year">2018</div>
            <div class="v-picker__title__btn v-date-picker-title__date active">
              <div>&nbsp;</div>
            </div>
          </div>
        </div>
        <div class="v-picker__body" style="width:290px;">
          <div>
            <div class="v-date-picker-header">
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.next</i>
                </div>
              </button>
              <div class="v-date-picker-header__value"><strong class="accent--text">August 2018</strong></div>
              <button type="button" class="v-btn v-btn--icon">
                <div class="v-btn__content">
                  <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.prev</i>
                </div>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date">
              <table>
                <thead>
                  <tr>
                    <th>S</th>
                    <th>M</th>
                    <th>T</th>
                    <th>W</th>
                    <th>T</th>
                    <th>F</th>
                    <th>S</th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td></td>
                    <td></td>
                    <td></td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">1</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">2</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">3</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">4</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">5</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">6</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">7</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">8</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating v-btn--outline accent--text">
                        <div class="v-btn__content">9</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">10</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">11</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">12</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">13</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">14</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">15</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">16</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">17</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">18</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">19</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">20</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">21</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">22</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">23</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">24</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">25</div>
                      </button>
                    </td>
                  </tr>
                  <tr>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">26</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">27</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">28</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">29</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">30</div>
                      </button>
                    </td>
                    <td>
                      <button type="button" class="v-btn v-btn--flat v-btn--floating">
                        <div class="v-btn__content">31</div>
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-flexgrid renders correctly 1`] = `
<div data-type="flexgrid" data-group="containers" data-uid="12" class="c-element c-flexgrid  c-element-parent  v-card v-card--flat undefined grid-list-undefined wrap container" style="height:undefined;">
  <div class="layout undefined wrap"></div>
</div>
`;

exports[`AllComponents c-flexgrid-item renders correctly 1`] = `
<div data-type="flexgrid-item" data-group="container-items" data-uid="13" class="c-element c-flexgrid-item  c-element-parent  xsundefined undefined flex">
  <div class="c-element-children c-flexgrid-item-items"></div>
</div>
`;

exports[`AllComponents c-form renders correctly 1`] = `
<div data-type="form" data-group="widgets" data-uid="14" class="c-element c-form  c-element-parent  v-card v-card--flat" style="height:undefined;">
  <form novalidate="novalidate" class="v-form c-form c-element-children">
    <div class="v-card__text c-form-items"></div>
  </form>
</div>
`;

exports[`AllComponents c-hlist renders correctly 1`] = `
<div data-type="hlist" data-group="containers" data-uid="15" class="c-element c-hlist  c-element-parent  v-card" style="height:undefined;">
  <div class="c-element-children c-hlist-items"></div>
</div>
`;

exports[`AllComponents c-html renders correctly 1`] = `<div data-type="html" data-group="widgets" data-uid="16" class="c-element c-html ">undefined</div>`;

exports[`AllComponents c-image renders correctly 1`] = `
<div data-type="image" data-group="widgets" data-uid="17" class="c-element c-image ">
  <div style="width:120px;height:120px;">
    <i aria-hidden="true" class="v-icon material-icons" style="width:120px;height:120px;font-size:40px;">image</i>
  </div>
</div>
`;

exports[`AllComponents c-list renders correctly 1`] = `
<div data-type="list" data-group="widgets" data-uid="18" class="c-element c-list  v-card" style="height:undefined;">
  <div class="v-data-iterator">
    <div class="layout">
      <div class="text-xs-center" style="width:100%;">No data available</div>
    </div>
    <div>
      <div class="v-data-iterator__actions">
        <div class="v-data-iterator__actions__select">Items per page:
          <div role="combobox" class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty">
            <div class="v-input__control">
              <div class="v-input__slot" style="height:undefined;">
                <div class="v-menu v-menu--inline">
                  <div class="v-menu__activator">
                    <div class="v-select__slot">
                      <div class="v-select__selections">
                        <div class="v-select__selection v-select__selection--comma">10</div>
                        <input aria-label="Items per page:" readonly="readonly" type="text" autocomplete="on" aria-readonly="false">
                      </div>
                      <div class="v-input__append-inner">
                        <div class="v-input__icon v-input__icon--append">
                          <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.dropdown</i>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div class="v-menu__content v-menu__content--auto" style="max-height:200px;min-width:75px;max-width:auto;top:12px;left:12px;transform-origin:top left;z-index:0;display:none;">
                    <div class="v-select-list v-card">
                      <div class="v-list">
                        <div>
                          <a class="v-list__tile v-list__tile--link">
                            <div class="v-list__tile__content">
                              <div class="v-list__tile__title">5</div>
                            </div>
                          </a>
                        </div>
                        <div>
                          <a class="v-list__tile v-list__tile--link v-list__tile--active primary--text">
                            <div class="v-list__tile__content">
                              <div class="v-list__tile__title">10</div>
                            </div>
                          </a>
                        </div>
                        <div>
                          <a class="v-list__tile v-list__tile--link">
                            <div class="v-list__tile__content">
                              <div class="v-list__tile__title">15</div>
                            </div>
                          </a>
                        </div>
                        <div>
                          <a class="v-list__tile v-list__tile--link">
                            <div class="v-list__tile__content">
                              <div class="v-list__tile__title">20</div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="v-data-iterator__actions__range-controls">
          <div class="v-data-iterator__actions__pagination">–</div>
          <button disabled="disabled" type="button" aria-label="Previous page" class="v-btn v-btn--disabled v-btn--flat v-btn--icon">
            <div class="v-btn__content">
              <i aria-hidden="true" class="v-icon material-icons">chevron_left</i>
            </div>
          </button>
          <button disabled="disabled" type="button" aria-label="Next page" class="v-btn v-btn--disabled v-btn--flat v-btn--icon">
            <div class="v-btn__content">
              <i aria-hidden="true" class="v-icon material-icons">chevron_right</i>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-map renders correctly 1`] = `<div data-type="map" data-group="widgets" data-uid="19" class="c-element c-map " style="width:100%;height:400px;"></div>`;

exports[`AllComponents c-panel renders correctly 1`] = `
<div data-type="panel" data-group="containers" data-uid="20" class="c-element c-panel  c-element-parent  v-card" style="height:undefined;width:undefined;">
  <div class="c-element-children c-panel-items"></div>
</div>
`;

exports[`AllComponents c-picker renders correctly 1`] = `
<div data-type="picker" data-group="inputs" data-uid="22" class="c-element c-picker fill-height">
  <div class="v-picker v-card v-picker--date fill-height">
    <div class="v-picker__title primary">
      <div class="v-date-picker-title">
        <div class="v-picker__title__btn v-date-picker-title__year">2018</div>
        <div class="v-picker__title__btn v-date-picker-title__date active">
          <div>&nbsp;</div>
        </div>
      </div>
    </div>
    <div class="v-picker__body" style="width:290px;">
      <div>
        <div class="v-date-picker-header">
          <button type="button" class="v-btn v-btn--icon">
            <div class="v-btn__content">
              <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.next</i>
            </div>
          </button>
          <div class="v-date-picker-header__value"><strong class="accent--text">August 2018</strong></div>
          <button type="button" class="v-btn v-btn--icon">
            <div class="v-btn__content">
              <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.prev</i>
            </div>
          </button>
        </div>
        <div class="v-date-picker-table v-date-picker-table--date">
          <table>
            <thead>
              <tr>
                <th>S</th>
                <th>M</th>
                <th>T</th>
                <th>W</th>
                <th>T</th>
                <th>F</th>
                <th>S</th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td></td>
                <td></td>
                <td></td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">1</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">2</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">3</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">4</div>
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">5</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">6</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">7</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">8</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating v-btn--outline accent--text">
                    <div class="v-btn__content">9</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">10</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">11</div>
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">12</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">13</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">14</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">15</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">16</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">17</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">18</div>
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">19</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">20</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">21</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">22</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">23</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">24</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">25</div>
                  </button>
                </td>
              </tr>
              <tr>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">26</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">27</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">28</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">29</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">30</div>
                  </button>
                </td>
                <td>
                  <button type="button" class="v-btn v-btn--flat v-btn--floating">
                    <div class="v-btn__content">31</div>
                  </button>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-placeholder renders correctly 1`] = `
<div data-type="placeholder" data-group="containers" data-uid="21" class="c-element c-placeholder ">
  <!---->
</div>
`;

exports[`AllComponents c-radio-list renders correctly 1`] = `
<div data-type="radio-list" data-group="inputs" data-uid="23" class="v-input c-element c-radio-list  v-input--selection-controls v-input--radio-group v-input--radio-group--column">
  <div class="v-input__control">
    <div class="v-input__slot" style="height:auto;">
      <div role="radiogroup" class="v-input--radio-group__input"></div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper"></div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-rating renders correctly 1`] = `
<div data-type="rating" data-group="inputs" data-uid="24" class="c-element c-rating  v-card v-card--flat text-xs-center" style="height:undefined;">
  <div></div>
  <div class="v-input d-inline-block">
    <div class="v-input__control">
      <div class="v-input__slot" style="height:undefined;">
        <i aria-hidden="true" class="v-icon px-1 v-icon--link material-icons">star</i>
        <i aria-hidden="true" class="v-icon px-1 v-icon--link material-icons">star</i>
        <i aria-hidden="true" class="v-icon px-1 v-icon--link material-icons">star</i>
        <i aria-hidden="true" class="v-icon px-1 v-icon--link material-icons">star</i>
        <i aria-hidden="true" class="v-icon px-1 v-icon--link material-icons">star</i>
      </div>
      <div class="v-messages">
        <div class="v-messages__wrapper"></div>
      </div>
    </div>
  </div>
  <div class="rating__message"></div>
</div>
`;

exports[`AllComponents c-rich-text renders correctly 1`] = `
<div data-type="rich-text" data-group="inputs" data-uid="25" class="c-element c-rich-text  v-card v-card--flat mb-3" style="height:undefined;">
  <div></div>
</div>
`;

exports[`AllComponents c-select renders correctly 1`] = `
<div data-type="select" data-group="inputs" data-uid="26" class="c-element c-select ">
  <div role="combobox" class="v-input v-text-field v-select">
    <div class="v-input__control">
      <div class="v-input__slot" style="height:undefined;">
        <div class="v-menu v-menu--inline">
          <div class="v-menu__activator">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <input readonly="readonly" type="text" autocomplete="on" aria-readonly="undefined">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i aria-hidden="true" class="v-icon material-icons">arrow_drop_down</i>
                </div>
              </div>
            </div>
          </div>
          <div class="v-menu__content" style="max-height:300px;min-width:0px;max-width:auto;top:12px;left:0px;transform-origin:top left;z-index:0;display:none;">
            <div class="v-select-list v-card">
              <div class="v-list">
                <div>
                  <div class="v-list__tile">
                    <div class="v-list__tile__content">
                      <div class="v-list__tile__title">No data available</div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages">
          <div class="v-messages__wrapper"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-select-list renders correctly 1`] = `
<div data-type="select-list" data-group="inputs" data-uid="27" class="c-element c-select-list ">
  <div role="combobox" class="v-input v-text-field v-select v-select--chips">
    <div class="v-input__control">
      <div class="v-input__slot" style="height:undefined;">
        <div class="v-menu v-menu--inline">
          <div class="v-menu__activator">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <input readonly="readonly" type="text" autocomplete="on" aria-readonly="undefined">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i aria-hidden="true" class="v-icon material-icons">arrow_drop_down</i>
                </div>
              </div>
            </div>
          </div>
          <div class="v-menu__content" style="max-height:300px;min-width:0px;max-width:auto;top:12px;left:0px;transform-origin:top left;z-index:0;display:none;">
            <div class="v-select-list v-card">
              <div class="v-list">
                <div>
                  <div class="v-list__tile">
                    <div class="v-list__tile__content">
                      <div class="v-list__tile__title">No data available</div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages">
          <div class="v-messages__wrapper"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-slider renders correctly 1`] = `
<div data-type="slider" data-group="inputs" data-uid="28" class="v-input c-element c-slider  v-input--slider">
  <div class="v-input__control">
    <div class="v-input__slot" style="height:undefined;">
      <div class="v-slider">
        <input role="slider" value="0" readonly="readonly" aria-readonly="false">
        <div class="v-slider__track__container">
          <div class="v-slider__track" style="transition:;left:7px;right:auto;width:100%;"></div>
          <div class="v-slider__track-fill primary" style="transition:;left:0;right:auto;width:NaN%;"></div>
        </div>
        <div class="v-slider__thumb-container" style="transition:;left:NaN%;">
          <div class="v-slider__thumb"></div>
        </div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper"></div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-switch renders correctly 1`] = `
<div data-type="switch" data-group="inputs" data-uid="29" class="v-input c-element c-switch  v-input--selection-controls v-input--switch">
  <div class="v-input__control">
    <div class="v-input__slot" style="height:undefined;">
      <div class="v-input--selection-controls__input">
        <input aria-checked="false" role="checkbox" type="checkbox" data-type="switch" data-group="inputs" data-uid="29">
        <div class="v-input--selection-controls__ripple"></div>
        <div class="v-input--switch__track"></div>
        <div class="v-input--switch__thumb"></div>
      </div>
    </div>
    <div class="v-messages">
      <div class="v-messages__wrapper"></div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-tab-item renders correctly 1`] = `
<div data-type="tab-item" data-group="container-items" data-uid="30" id="30" class="v-tabs__content c-element c-tab-item  c-element-parent " style="display:none;">
  <div data-type="tab-item" data-group="container-items" data-uid="30" class="v-card" style="height:undefined;background-color:undefined;">
    <div class="v-card__text c-element-children c-tab-item-items"></div>
  </div>
</div>
`;

exports[`AllComponents c-table renders correctly 1`] = `
<div data-type="table" data-group="widgets" data-uid="31" class="c-element c-table  v-card" style="height:undefined;">
  <div>
    <div class="v-table__overflow">
      <table class="v-datatable v-table">
        <tbody>
          <tr>
            <td colspan="0" class="text-xs-center">No data available</td>
          </tr>
        </tbody>
      </table>
    </div>
    <div class="v-datatable v-table">
      <div class="v-datatable__actions">
        <div class="v-datatable__actions__select">Rows per page:
          <div role="combobox" class="v-input v-text-field v-select v-input--hide-details v-input--is-label-active v-input--is-dirty">
            <div class="v-input__control">
              <div class="v-input__slot" style="height:undefined;">
                <div class="v-menu v-menu--inline">
                  <div class="v-menu__activator">
                    <div class="v-select__slot">
                      <div class="v-select__selections">
                        <div class="v-select__selection v-select__selection--comma">10</div>
                        <input aria-label="Rows per page:" readonly="readonly" type="text" autocomplete="on" aria-readonly="false">
                      </div>
                      <div class="v-input__append-inner">
                        <div class="v-input__icon v-input__icon--append">
                          <i aria-hidden="true" class="v-icon material-icons">$vuetify.icons.dropdown</i>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div class="v-menu__content v-menu__content--auto" style="max-height:200px;min-width:75px;max-width:auto;top:12px;left:12px;transform-origin:top left;z-index:0;display:none;">
                    <div class="v-select-list v-card">
                      <div class="v-list">
                        <div>
                          <a class="v-list__tile v-list__tile--link">
                            <div class="v-list__tile__content">
                              <div class="v-list__tile__title">5</div>
                            </div>
                          </a>
                        </div>
                        <div>
                          <a class="v-list__tile v-list__tile--link v-list__tile--active primary--text">
                            <div class="v-list__tile__content">
                              <div class="v-list__tile__title">10</div>
                            </div>
                          </a>
                        </div>
                        <div>
                          <a class="v-list__tile v-list__tile--link">
                            <div class="v-list__tile__content">
                              <div class="v-list__tile__title">15</div>
                            </div>
                          </a>
                        </div>
                        <div>
                          <a class="v-list__tile v-list__tile--link">
                            <div class="v-list__tile__content">
                              <div class="v-list__tile__title">20</div>
                            </div>
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div class="v-datatable__actions__range-controls">
          <div class="v-datatable__actions__pagination">–</div>
          <button disabled="disabled" type="button" aria-label="Previous page" class="v-btn v-btn--disabled v-btn--flat v-btn--icon">
            <div class="v-btn__content">
              <i aria-hidden="true" class="v-icon material-icons">chevron_left</i>
            </div>
          </button>
          <button disabled="disabled" type="button" aria-label="Next page" class="v-btn v-btn--disabled v-btn--flat v-btn--icon">
            <div class="v-btn__content">
              <i aria-hidden="true" class="v-icon material-icons">chevron_right</i>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-tabs renders correctly 1`] = `
<div data-type="tabs" data-group="containers" data-uid="32" class="v-tabs c-element c-tabs  c-element-parent ">
  <div class="v-tabs__bar">
    <!---->
    <div class="v-tabs__wrapper">
      <div class="v-tabs__container">
        <div class="v-tabs__slider-wrapper" style="left:nullpx;transition:none;width:nullpx;">
          <div class="v-tabs__slider accent"></div>
        </div>
      </div>
    </div>
    <!---->
  </div>
  <div class="v-tabs__items"></div>
</div>
`;

exports[`AllComponents c-tags renders correctly 1`] = `
<div data-type="tags" data-group="inputs" data-uid="33" class="c-element c-tags ">
  <div role="combobox" class="v-input v-text-field v-select v-select--chips">
    <div class="v-input__control">
      <div class="v-input__slot" style="height:undefined;">
        <div class="v-menu v-menu--inline">
          <div class="v-menu__activator">
            <div class="v-select__slot">
              <div class="v-select__selections">
                <input readonly="readonly" type="text" autocomplete="on" aria-readonly="undefined">
              </div>
              <div class="v-input__append-inner">
                <div class="v-input__icon v-input__icon--append">
                  <i aria-hidden="true" class="v-icon material-icons">arrow_drop_down</i>
                </div>
              </div>
            </div>
          </div>
          <div class="v-menu__content" style="max-height:300px;min-width:0px;max-width:auto;top:12px;left:0px;transform-origin:top left;z-index:0;display:none;">
            <div class="v-select-list v-card">
              <div class="v-list">
                <div>
                  <div class="v-list__tile">
                    <div class="v-list__tile__content">
                      <div class="v-list__tile__title">No data available</div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages">
          <div class="v-messages__wrapper"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-text renders correctly 1`] = `
<div data-type="text" data-group="inputs" data-uid="34" class="c-element c-text ">
  <div class="v-input v-text-field">
    <div class="v-input__control">
      <div class="v-input__slot" style="height:undefined;">
        <div class="v-text-field__slot">
          <input type="text">
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages">
          <div class="v-messages__wrapper"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-text-area renders correctly 1`] = `
<div data-type="text-area" data-group="inputs" data-uid="35" class="c-element c-text-area ">
  <div class="v-input v-textarea v-text-field">
    <div class="v-input__control">
      <div class="v-input__slot" style="height:undefined;">
        <div class="v-text-field__slot">
          <textarea rows="5">undefined</textarea>
        </div>
      </div>
      <div class="v-text-field__details">
        <div class="v-messages">
          <div class="v-messages__wrapper"></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AllComponents c-video renders correctly 1`] = `
<div data-type="video" data-group="widgets" data-uid="36" class="c-element c-video " style="position:relative;overflow:hidden;width:100%;height:auto;padding-top:0;">
  <video width="100%" height="100%" style="position:absolute;top:0;left:0;"></video>
</div>
`;

exports[`AllComponents c-video-stream renders correctly 1`] = `
<div data-type="video-stream" data-group="widgets" data-uid="37" class="c-element c-video-stream " style="position:relative;overflow:hidden;width:100%;height:auto;padding-top:0;">
  <img width="100%" height="100%" style="position:absolute;top:0;left:0;">
</div>
`;

exports[`AllComponents c-vlist renders correctly 1`] = `
<div data-type="vlist" data-group="containers" data-uid="38" class="c-element c-vlist  v-card" style="height:undefined;background-color:undefined;">
  <div class="c-element-children c-vlist-items"></div>
</div>
`;

exports[`AllComponents c-youtube renders correctly 1`] = `<div data-type="youtube" data-group="widgets" data-uid="39" class="c-element c-youtube "></div>`;
